--- a/src/app/tela-cadastro/tela-cadastro.component.html
+++ b/src/app/tela-cadastro/tela-cadastro.component.html
@@ -1,1 +1,36 @@
-<p>tela-cadastro works!</p>
+<header>
+    <img class="i" src="../assets/logo_informata_vazada.png"/>
+  </header>
+  <div class="login_body">
+    <div class="login_box">
+       
+        <form>
+            <div class="input_box">
+                <input required type="email" placeholder="Digite seu melhor E-mail">
+            </div>
+            <div class="input_box">
+                <input required type="password"placeholder= "Senha">
+            </div>
+            <div class="input_box">
+                <input required type="password"placeholder= "Confirme sua senha">
+            </div>
+            <div>
+                <button class="submit">
+                    Cadastrar
+                </button>
+            </div>
+        </form>
+        <div class="support">
+           <div class="remember">
+           <span><input type="checkbox"_style="margin: ; padding: 0; height: 15px;"></span>
+           <span>Lembre-se de mim</span>
+           </div>
+        
+        </div>
+     
+            
+  
+            
+        </div>
+    </div>
+ 
