:art: criando uma tela para a função de lougout, já que a Api não está pegando

--- a/src/app/tela-produtos/tela-produtos.component.html
+++ b/src/app/tela-produtos/tela-produtos.component.html
@@ -1,1 +1,56 @@
-<p>tela-produtos works!</p>
+<div id="principal">
+    <div id="linha"> <p> </p>
+
+    <div class="logo" ></div>
+    <img class=" image "src="../assets/logo_informata_vazada.png">
+</div>
+    <header class="top">
+        <img class="top" src="../assets/proj.png">
+        <nav>
+            <ul>
+                <li><a href="#"> ➡️ Logout</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Bem-vindo(a) ao site da Informata.</h1>
+        <p>Teremos o maior prazer em ajudá-lo no que for preciso, porque ajudar faz parte do nosso negócio. Como prestadores de serviço precisamos estar sempre ajudando alguém, para exercitar o aprendizado, e para desenvolver novas tecnologias. Bem vindo(a) à Informata.</p>
+        </main>
+
+        <section class="content-section">
+            <div class="card card1">
+            <img class="photo"src="./assets/buy.png" alt="">
+            <p class="letter"> BuyStock </p>
+            
+            </div>
+            <section id="content-section">
+                <div class="card card2">
+                <img class="photo" src="./assets/stock.png" alt="">
+                <p class="letter"> StockBox - WMS </p>
+                    
+                </div>
+                <section class="content-section">
+                    <div class="card card3">
+                    <img class="photo" src="./assets/md.png" alt="">
+                    <p class="letter"> MD-Log ERP </p>
+                   
+                    </div>
+                
+
+        </section>
+    
+    <article class="About"> 
+       
+        <h1 class="inside-article">A melhor equipe trabalhando sempre</h1>
+        <h2 class="inside-article">para te garantir o melhor serviço</h2>
+        <p class="inside-article">Acreditamos nas pessoas e no relacionamento agregador, como forma de desenvolver projetos de inovação continuada, tendo Atitude, Comprometimento e Ética como ponto de honra da nossa organização.</p>      
+    </article>
+
+     
+  
+<div class="google"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.373616721597!2d-34.87499833567059!3d-8.063319482803152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1fa58a76df3f%3A0x168bc4a78549272e!2sInformata!5e0!3m2!1spt-BR!2sbr!4v1674685576315!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+<footer>
+   
+    <p> © Informata, 2023. Todos os direitos reservados.</p>
+</footer>
