--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     background-color: rgba(163, 162, 162, 0.34);
+    margin: 50px 100px;
 }
