:art: Routing utilizado
routing pronto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-
-
-
-<app-tela-produtos></app-tela-produtos>
+<nav>
+    <a class="cadastro"routerLink="/cadastro">cadastro</a>
+    <a class="login" routerLink="/login">login</a>
+    <a class="produtos"routerLink="/produtos">produtos</a>
+</nav>
 <router-outlet></router-outlet>
