--- a/src/app/tela-produtos/tela-produtos.component.html
+++ b/src/app/tela-produtos/tela-produtos.component.html
@@ -8,7 +8,7 @@
         <img class="top" src="../assets/proj.png">
         <nav>
             <ul>
-                <li><a href="#"> ➡️ Logout</a></li>
+                <li> <a routerLink="/login">➡️ Logout</a></li>
 
             </ul>
         </nav>
