:art: Update CSS
CSS modificado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
-    <a class="cadastro"routerLink="/cadastro">cadastro</a>
-    <a class="login" routerLink="/login">login</a>
-    <a class="produtos"routerLink="/produtos">produtos</a>
+    <a class="cadastro"routerLink="/cadastro">Cadastro</a>
+    <a class="login" routerLink="/login">Login</a>
+    <a class="produtos"routerLink="/produtos">Produtos</a>
 </nav>
 <router-outlet></router-outlet>
