--- a/src/app/tela-login/tela-login.component.html
+++ b/src/app/tela-login/tela-login.component.html
@@ -22,8 +22,12 @@
            <div class="remember">
            <span><input type="checkbox"_style="margin: ; padding: 0; height: 15px;"></span>
            <span>Lembre-se de mim</span>
-           </div>
-        
+    </div>
+    <div class="signUp">
+    <p > Não posui cadastro?
+        <a href="" routerLink="/cadastro">Cadastre-se</a>
+    </p> 
+</div>
         </div>
      
             
